--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.1.2",
     "blessed": "^0.1.81",
+    "blessed-contrib": "^4.11.0",
+    "bottleneck": "^2.19.5",
     "winston": "^3.9.0",
     "ws": "^8.13.0"
   }
