--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@alpacahq/alpaca-trade-api": "^3.1.2",
     "@polygon.io/client-js": "^7.3.2",
     "async-mutex": "^0.5.0",
+    "axios": "^1.7.9",
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.11.0",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5",
+    "moment-timezone": "^0.5.46",
     "node-cron": "^3.0.3",
     "winston": "^3.14.2",
     "ws": "^8.13.0"
